# sinwin

./: .gitmodules  20250306185037_output.xlsx  20250306185251_output.xlsx  20250306185709_output.xlsx  20250306190222_output.xlsx  20250306190638_output.xlsx  AHprkNAM  CHANGELOG.md  Dockerfile  README.md  config.ini  data.json  docker-compose.yml  dump.rdb  format-code.py  output.xlsx  prod.ini  pyproject.toml  test.ini  test.py
app/: __main__.py  api.py  config.py  izimin_main.py  loader.py
app/database/: _debug.py  redis.py
app/handlers/: __init__.py  _examples.py  admin.py  admin_topworkers.py  default.py  register.py
app/keyboards/: admin_inline.py  inline.py  menu_inline.py  reply.py  test.py
app/utils/: algorithms.py  checker.py  default_commands.py  fileloader.py  logger.py
locales/: default.json
