[tool.poetry]
name = "sinwin"
version = "0.1.0"
description = ""
authors = ["alexeev-prog <alexeev.dev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2024.2"
hermes-langlib = "^0.1.1"
aiogram = "^3.17.0"
rich = "^13.9.4"
configparser = "^7.1.0"
loguru = "^0.7.3"
aiohttp = "^3.11.12"
httpx = "^0.28.1"
aiocache = "^0.12.3"
redis = "^5.2.1"
apscheduler = "^3.11.0"
python-dateutil = "^2.9.0.post0"

[format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "tabs"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
